add kibana & pvc

--- a/elasticsearch-configmap.yml
+++ b/elasticsearch-configmap.yml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   namespace: elk
   name: elasticsearch-config
+  labels:
+    elasticsearch: elasticsearch
 data:
   elasticsearch.yml: |
     cluster.name: "k8s-cluster"
