--- a/elasticsearch/elasticsearch-deployment.yml
+++ b/elasticsearch/elasticsearch-deployment.yml
@@ -21,18 +21,32 @@ spec:
           command: ["sysctl", "-w", "vm.max_map_count=262144"]
           securityContext:
             privileged: true
+        - name: add-folder-permissions
+          image: busybox
+          command: ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
+          securityContext:
+            privileged: true
+          volumeMounts:
+          - name: data
+            mountPath: /usr/share/elasticsearch/data
+        - name: increase-fd-ulimit
+          image: busybox
+          command: ["sh", "-c", "ulimit -n 65536"]
+          securityContext:
+            privileged: true
       containers:
         - name: elasticsearch
           image: docker.elastic.co/elasticsearch/elasticsearch:7.13.4
-          imagePullPolicy: "IfNotPresent"
           resources:
             limits:
-              memory: 0.5Gi
+              memory: 0.8Gi
               cpu: "500m"
           ports:
             - containerPort: 9200
+              name: http
               protocol: TCP
             - containerPort: 9300
+              name: transport
               protocol: TCP
           env:
             - name: ES_JAVA_OPTS
@@ -42,11 +56,16 @@ spec:
             - name: discovery.type
               value: single-node
           volumeMounts:
-            - name: elasticsearch-config
+            - name: config
               mountPath: /usr/share/elasticsearch/config/elasticsearch.yml  
-              subPath: elasticsearch.yml      
+              subPath: elasticsearch.yml     
+            - name: data
+              mountPath: /usr/share/elasticsearch/data
       volumes:
-        - name: elasticsearch-config
+        - name: config
           configMap:
             name: elasticsearch-config
             defaultMode: 420
+        - name: data
+          persistentVolumeClaim:
+            claimName: elasticsearch-pvc
