--- a/elasticsearch/elasticsearch-pvc.yml
+++ b/elasticsearch/elasticsearch-pvc.yml
@@ -4,10 +4,10 @@ metadata:
   namespace: elk
   name: elasticsearch-pvc
 spec:
-  storageClassName: elasticsearch-storageclass
+  storageClassName: default
   resources:
     requests:
-      storage: 0.5Gi
+      storage: 10Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
